# liboxidizer

./: .gitignore  Cargo.toml  LICENSE  build.rs
examples/: simple.rs
protos/: krpc.proto
src/: client.rs  error.rs  lib.rs
src/client/: vessel.rs
src/protos/: krpc.rs  mod.rs
tests/: common.rs  lib_test.rs
