[package]
name = "liboxidizer"
version = "0.1.0"
authors = ["Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"

[dependencies]
websocket = "^0.22.1"
failure = "^0.1.5"
protobuf = { version = "^2.3", features = ["with-bytes"] } 
serde = { version = "^1.0.87", features = ["derive"] }
serde_bytes = "^0.10.4"
serde_json = "^1.0.38"
byteorder = "^1.3.1"

[build-dependencies]
protobuf-codegen-pure = "^2.0.5"
protoc-rust = "^2.0"